refactor: move classes to api package

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Games</string>
+    <string name="game_image_content_description">Game image</string>
 </resources>
